# boids

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: Boid.cpp  Boid.hpp  boid.cpp  boid.h  boids.cpp  main.cpp  vector_utils.h
